--- a/snake.html
+++ b/snake.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Snake-Ek Gaming Katha</title>
+    <title>Snake - Ek Gaming Katha</title>
     <link rel="stylesheet" href="snake.css">
 
 </head>
 <body>
     <div class="body">
+        <div id="scoreBox">score: 0</div>
+        <div id="hiscoreBox">Hi score: 0</div>
         <div id="board"></div> <!--snake moving board-->
 
     </div>
