--- a/whatsapp.html
+++ b/whatsapp.html
@@ -13,8 +13,8 @@
             <!--Header-->
 
          <div class="header">
-            <div class="usering">
-                <img src="c:\Users\Navgurukul\Desktop\Tictac game\images\coverram.jpg" class="cover">
+            <div class="userimg">
+                <img src="images/coverram.jpg" class="cover">
             </div>
             <ul class="nav_icons">
                 <li><ion-icon name="scan-circle-outline"></ion-icon></li>
@@ -129,11 +129,11 @@
                 </div> 
         </div>
 
-
+                               <!--Chatbox-->
     <div class="rightSide">
         <div class="header">
             <div class="imgText">
-                 <div class="usering">
+                 <div class="userimg">
                     <img src="images\olive.jpeg" class="cover">      <!--your whatsapp dp show in right header chat and showing who are online-->
                  </div>
                  <h4>Surbhi Kharate<br><span>Online</span></h4>
@@ -144,6 +144,7 @@
             </ul>
         </div> 
                         <!---chatbox-->
+
                         <div class="chatbox">
                         <div class="message my_message">
                             <p>Hi<br><span>12:15</span></p>
